--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="vlt-section__vertical-align">
 					<div class="vlt-section__content">
 						<div class="vlt-section__ken-burn-background has-mobile-image"><img src="assets/img/home.jpg"
-								alt=""><img src="assets/img/pfp.jpg" alt=""></div>
+								alt=""><img src="assets/img/home.jpg" alt=""></div>
 						<div class="container">
 							<div class="row">
 								<div class="col-lg-5">
