--- a/nearx.html
+++ b/nearx.html
@@ -60,7 +60,7 @@
 				<div class="vlt-navbar-inner--right">
 					<div class="d-flex align-items-center">
 						<!--Contacts-->
-						<div class="vlt-navbar-contacts"><a href="tel:+918708254881">+91-8708254881</a></div>
+						<div class="vlt-navbar-contacts"><a href="tel:+971-504478725">+971-504478725<p>+91-9999733455</a></div>
 						<!--Menu Burger--><a class="vlt-menu-burger js-offcanvas-menu-open" href="#"><svg
 								xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square"
@@ -115,7 +115,7 @@
 					<i class="lnir-instagram"></i></a></div>
 			<!--Copyright-->
 			<div class="vlt-offcanvas-menu__copyright">
-				<p>Made with 🤍<br>By Bhavuk</p>
+				<p>Made with 🤍<br>By A.Sagar</p>
 			</div>
 		</div>
 	</div>
@@ -123,12 +123,12 @@
 	<div class="vlt-site-overlay"></div>
 	<!--Fixed socials-->
 	<div class="vlt-fixed-socials">
-		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.linkedin.com/in/bhavuk-arora-4a7263216/">
+		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.linkedin.com/in/akshay-sagar/">
 			<i class="lnir-linkedin-original"></i></a>
-		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://github.com/Bhavukarora03">
+		<a class="vlt-social-icon vlt-social-icon--style-1" href="mailto:AkshaySagar3@gmail.com">
 			<i class="lnir-github-original"></i>
 		</a>
-		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.instagram.com/baevuk_/">
+		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.instagram.com/em_akshay/">
 			<i class="lnir-instagram"></i></a>
 	</div>
 	<!--Main-->
@@ -160,7 +160,7 @@
 						<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 							style="animation-delay:.4s; animation-duration:700ms;">
 							<h6>Created by</h6>
-							<p>Bhavuk</p>
+							<p>A.Sagar</p>
 						</div>
 					</div>
 				</div>
@@ -279,7 +279,7 @@
 	<!--Footer-->
 	<footer class="vlt-footer vlt-footer--default vlt-footer--fixed">
 		<div class="vlt-footer-copyright">
-			<p>© Bhavuk, 2023</p>
+			<p>© A.Sagar, 2023</p>
 		</div>
 		<!-- <div class="vlt-language-switcher"><a class="is-active" href="#">Eng</a><a href="#">Fra</a><a href="#">Ger</a></div> -->
 	</footer>
