--- a/index.html
+++ b/index.html
@@ -545,22 +545,19 @@
 											<div class="vlt-post-border"><span class="top"></span><span
 													class="right"></span><span class="bottom"></span><span
 													class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.png" alt=""
+											<div class="vlt-post-media"><img src="assets/img/blog-01.png" alt=""
 													loading="lazy"></div>
 											<div class="vlt-post-content">
 												<header class="vlt-post-header"><span class="vlt-post-date">August 18,
-														2021</span>
-													<h3 class="vlt-post-title"><a href="Getx.html">GetX
-															State-Management</a></h3>
+														2023</span>
+													<h3 class="vlt-post-title"><a href="The Role of AI in Modern Healthcare.html">The Role of AI in Modern Healthcare</a></h3>
 												</header>
 												<div class="vlt-post-excerpt">
-													<p>GetX is more than just a state management library. It is, in
-														fact, a small flutter framework capable of handling route
-														management and dependency injection in flutter applications.
+													<p>Artificial Intelligence (AI) is revolutionizing the healthcare sector by enhancing diagnostic accuracy, personalizing treatment plans, and optimizing operational efficiency. From predictive analytics to robotic surgery, AI applications are transforming how healthcare is delivered and experienced. This blog explores the various roles AI plays in modern healthcare, its benefits, challenges, and future prospects. 
 													</p>
 												</div>
 												<footer class="vlt-post-footer"><a class="vlt-read-more-link"
-														href="Getx.html">
+														href="The Role of AI in Modern Healthcare.html">
 														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg"
 															viewBox="0 0 16 8">
 															<defs />
@@ -580,127 +577,20 @@
 											<div class="vlt-post-border"><span class="top"></span><span
 													class="right"></span><span class="bottom"></span><span
 													class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.png" alt=""
+											<div class="vlt-post-media"><img src="assets/img/blog-02.png" alt=""
 													loading="lazy"></div>
 											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">August 18,
-														2021</span>
-													<h3 class="vlt-post-title"><a href="Getx.html">GetX
-															State-Management</a></h3>
+												<header class="vlt-post-header"><span class="vlt-post-date">December 18,
+														2023</span>
+													<h3 class="vlt-post-title"><a href="Getx1.html">The Role of Cloud Computing in Healthcare
+													</a></h3>
 												</header>
 												<div class="vlt-post-excerpt">
-													<p>GetX is more than just a state management library. It is, in
-														fact, a small flutter framework capable of handling route
-														management and dependency injection in flutter applications.
+													<p>Cloud computing has emerged as a game-changer in the healthcare sector, offering innovative solutions to enhance patient care, streamline operations, and drive medical research.
 													</p>
 												</div>
 												<footer class="vlt-post-footer"><a class="vlt-read-more-link"
-														href="Getx.html">
-														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg"
-															viewBox="0 0 16 8">
-															<defs />
-															<path
-																d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z"
-																fill="currentColor" />
-														</svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-								<div class="col-xl-4">
-									<div class="vlt-gap-30--lg"></div>
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
-										style="animation-delay:.3s; animation-duration:700ms;">
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span
-													class="right"></span><span class="bottom"></span><span
-													class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.png" alt=""
-													loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">August 18,
-														2021</span>
-													<h3 class="vlt-post-title"><a href="Getx.html">GetX
-															State-Management</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>GetX is more than just a state management library. It is, in
-														fact, a small flutter framework capable of handling route
-														management and dependency injection in flutter applications.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link"
-														href="Getx.html">
-														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg"
-															viewBox="0 0 16 8">
-															<defs />
-															<path
-																d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z"
-																fill="currentColor" />
-														</svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-								<div class="col-xl-4">
-									<div class="vlt-gap-30--lg"></div>
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
-										style="animation-delay:.3s; animation-duration:700ms;">
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span
-													class="right"></span><span class="bottom"></span><span
-													class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.png" alt=""
-													loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">August 18,
-														2021</span>
-													<h3 class="vlt-post-title"><a href="Getx.html">GetX
-															State-Management</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>GetX is more than just a state management library. It is, in
-														fact, a small flutter framework capable of handling route
-														management and dependency injection in flutter applications.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link"
-														href="Getx.html">
-														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg"
-															viewBox="0 0 16 8">
-															<defs />
-															<path
-																d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z"
-																fill="currentColor" />
-														</svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-								<div class="col-xl-4">
-									<div class="vlt-gap-30--lg"></div>
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
-										style="animation-delay:.3s; animation-duration:700ms;">
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span
-													class="right"></span><span class="bottom"></span><span
-													class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.png" alt=""
-													loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">August 18,
-														2021</span>
-													<h3 class="vlt-post-title"><a href="Getx.html">GetX
-															State-Management</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>GetX is more than just a state management library. It is, in
-														fact, a small flutter framework capable of handling route
-														management and dependency injection in flutter applications.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link"
-														href="Getx.html">
+														href="Getx1.html">
 														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg"
 															viewBox="0 0 16 8">
 															<defs />
